--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,24 @@
+@font-face {
+    src: url('../fonts/NunitoSans-Regular.ttf');
+    font-family: "Nunito-Sans";
+    src: url('../fonts/YesevaOne-Regular.ttf');
+    font-family: "Yeseva-one";
+}
+
+body {
+    margin: 0px;
+    font-family: "Nunito-Sans";
+    background: #131313;
+}
+
+body * {
+    box-sizing: border-box;
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
 .button {
     background: #E3B873;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
@@ -8,4 +29,178 @@
     color: white;
     text-transform: uppercase;
     font-style: italic;
+}
+
+.logo {
+    color:#E3B873;
+}
+
+.header {
+    background: #131313;
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 15px;
+    text-transform: uppercase;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    height: 83px;
+    align-items: center;
+}
+
+.header-nav {
+    list-style: none;
+    display: flex;
+}
+
+.header-nav_item {
+    margin-right: 47px;
+}
+
+.header-nav_item a {
+    text-decoration: none;
+    color:white;
+}
+
+.tel {
+    color: #E3B873;
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 15px;
+    text-align: right;
+    text-decoration-line: underline;
+}
+
+.preview-container {
+    width: 1440px;
+    margin: 0 auto;
+    height: 707px;
+}
+
+.preview {
+    background-image: url('../images/preview.jpg');
+    background-size: cover;
+    height: 707px;
+    position: relative;
+    filter: brightness(30%);
+}
+
+/*.preview-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}*/
+ 
+
+.preview-text {
+    margin: 0;
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 53px;
+    text-transform: uppercase;
+    color: white;
+    position: relative;
+    top: -513px;
+    left: 10%;
+    width: 40%;
+}
+
+.preview-discription {
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 36px;
+    color: #FFFFFF;
+    text-transform: none;
+    position: relative;
+}
+
+.button-preview-cost {
+    background: #E3B873;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+    border-radius: 2px;
+    outline: 0;
+    border: 0;
+    color: white;
+    text-transform: uppercase;
+    font-style: italic;
+    width: 207px;
+    height: 51px;
+    position: relative;
+    font-size: 11px;
+}
+
+.button-preview-application {
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 2px;
+    outline: 0;
+    border: 1px;
+    border-color:#FFFFFF;
+    color: white;
+    text-transform: uppercase;
+    font-style: italic;
+    width: 207px;
+    height: 51px;
+    position: relative;
+    border-style:solid;
+    font-size: 11px;
+}
+
+.complete-container {
+    padding: 107px 135px 414px;
+    position: relative;
+}
+
+.projects-discription{
+    position: relative;
+    display: flex;
+    margin: 0;
+    padding-left: 0px;
+    
+}
+
+.complete {
+    width: 1440px;
+    margin: 0 auto;
+    height: 1074px;
+    padding-bottom: 90px;
+}
+
+
+
+.title-complete {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 53px;
+    text-transform: uppercase;
+    color: white;
+    position: relative;  
+    width: 40%;
+    
+}
+
+.content-projects {
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 27px;
+    color: #FFFFFF;
+    text-transform:none;
 }
