--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ body * {
 
 .header {
     background: #131313;
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito-Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 11px;
@@ -70,7 +70,7 @@ body * {
 
 .tel {
     color: #E3B873;
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito-Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 11px;
@@ -105,7 +105,7 @@ body * {
 
 .preview-text {
     margin: 0;
-    font-family: 'Yeseva One';
+    font-family: 'Yeseva-One';
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -119,7 +119,7 @@ body * {
 }
 
 .preview-discription {
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito-Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
@@ -160,62 +160,108 @@ body * {
     font-size: 11px;
 }
 
-
-
-.projects-discription{
-    position: relative;
-    display: flex;
-    margin: 0;
-    padding-left: 0px;
-    
-}
-
 .complete {
     width: 1440px;
-    margin: 0 auto;
+    margin-right: 0 auto;
     height: 1074px;
 }
 
 .complete-container {
-    padding-top: 10%;
+    padding-top: 107px;
     padding-left: 10%;
     padding-right: 10%;
-    display: flex;
-    position: relative;
-    margin: 0 auto;
+    padding-bottom: 415px;
     height: 100%;
+    display: flex;   
 }
 
 .title-complete {
-    font-family: 'Yeseva One';
+    font-family: 'Yeseva-One';
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
-    line-height: 53px;
+    font-size: 27px;
+    line-height: 37px;
+    /*letter-spacing: -0.07em;*/
     text-transform: uppercase;
-    color: white;
-    position: relative;  
-    width: 31%;
-    margin: 0px;
+    color: #E3B873;
+    width: 35%;
 }
 
 .content-projects {
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito-Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 27px;
+    text-transform: none;
     color: #FFFFFF;
-    text-transform:none;
+    
 }
 
 .complete-img {
     background: url('../images/complete.jpg');
-    margin: 0px;
     position: relative;
-    background-size: cover;
-    width: 600px;
-    height: 600px;
+    background-size:contain;
+    width: 679px;
+    height: 482px;
     background-repeat: no-repeat;
-    right: 0px;
+    margin: 0 auto;
+    
 }
+
+.projects-discription {
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    width: 679px;
+    padding: 0px;
+    align-content: right;
+}
+
+.title1,.title2,.title3,.title4 {
+    font-family: 'Yeseva-One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #E3B873;
+}
+
+.text1,.text2,.text3,.text4 {
+    font-family: 'Nunito-Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-transform: none;
+}
+
+.projects-text-container {
+    position:relative;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+
+}
+
+.list-item a{
+    margin-right: 60px;
+    padding: 0px;
+    font-family: 'Nunito-Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 21px;
+
+    color: #FFFFFF;
+    
+}
+
+.nav-list {
+    display: flex;
+    margin: 0 auto;
+    padding: 0px;
+}
+
