--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,16 @@
 @font-face {
-    src: url('../fonts/NunitoSans-Regular.ttf');
-    font-family: "Nunito-Sans";
-    src: url('../fonts/YesevaOne-Regular.ttf');
     font-family: "Yeseva-one";
+    src: url('../fonts/YesevaOne-Regular.ttf');
+}    
+
+@font-face {
+    font-family: 'Nunito-Sans';
+    src: url('../fonts/NunitoSans-Regular.ttf');  
 }
 
 body {
     margin: 0px;
-    font-family: "Nunito-Sans";
+    font-family: 'Nunito-Sans';
     background: #131313;
 }
 
@@ -115,7 +118,7 @@ body * {
     position: relative;
     top: -513px;
     left: 10%;
-    width: 40%;
+    max-width: 40%;
 }
 
 .preview-discription {
@@ -158,21 +161,23 @@ body * {
     position: relative;
     border-style:solid;
     font-size: 11px;
+    margin-left: 10px;
 }
 
 .complete {
-    width: 1440px;
-    margin-right: 0 auto;
-    height: 1074px;
+    max-width: 1440px;
+    margin: 0 auto;
+    max-height: 1074px;
 }
 
 .complete-container {
     padding-top: 107px;
-    padding-left: 10%;
-    padding-right: 10%;
     padding-bottom: 415px;
     height: 100%;
     display: flex;   
+    position: relative;
+    margin-left: 134.45px;
+    margin-right: 134.45px;
 }
 
 .title-complete {
@@ -184,7 +189,8 @@ body * {
     /*letter-spacing: -0.07em;*/
     text-transform: uppercase;
     color: #E3B873;
-    width: 35%;
+    padding: 0px;
+    margin-top: 6.5%;
 }
 
 .content-projects {
@@ -196,26 +202,27 @@ body * {
     text-transform: none;
     color: #FFFFFF;
     
+    
 }
 
 .complete-img {
     background: url('../images/complete.jpg');
     position: relative;
-    background-size:contain;
+    background-size:cover;
     width: 679px;
     height: 482px;
     background-repeat: no-repeat;
     margin: 0 auto;
+    padding: 0px;
     
 }
 
 .projects-discription {
-    margin-right: 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    width: 679px;
     padding: 0px;
-    align-content: right;
+    
 }
 
 .title1,.title2,.title3,.title4 {
@@ -246,22 +253,78 @@ body * {
 
 }
 
-.list-item a{
-    margin-right: 60px;
-    padding: 0px;
-    font-family: 'Nunito-Sans';
+.list-item a {
+    
+    margin-right: 60.5px;
+    font-family: 'Yeseva One';
     font-style: normal;
     font-weight: 400;
-    font-size: 13px;
-    line-height: 21px;
-
-    color: #FFFFFF;
-    
+    font-size: 14px;
+    line-height: 19px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.3);
 }
 
 .nav-list {
     display: flex;
-    margin: 0 auto;
-    padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+    padding-left: 0px;
+    text-decoration: none;
 }
 
+
+
+.arrow-1 {
+    cursor: pointer;
+    position: relative;
+    width: 80px;
+    height: 50px;
+    margin: 20px;
+}
+.arrow-1 div {
+    position: relative;
+    top: 20px;
+    width: 90px;
+    height: 1.34px;
+    background-color: #E3B873;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+    left:0;
+    display: block;
+}
+.arrow-1 div::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 1.34px;
+    top: -11px;
+    right: -8px;
+    background-color: #E3B873;
+    transform: rotate(45deg);
+}
+.arrow-1 div::before {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 1.34px;
+    top: 11px;
+    right: -8px;
+    background-color: #E3B873;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+    transform: rotate(-45deg);
+}
+.arrow-1:hover {
+    animation: arrow-1 1s linear infinite;
+}
+@keyframes arrow-1 {
+    0% {
+        left:0;
+    }
+    50% {
+        left:10px;
+    }
+    100% {
+        left:0;
+    }
+}
